--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.17.0" // Add this line
+    "@babel/plugin-proposal-private-property-in-object": "^7.17.0" 
   },
   "scripts": {
     "start": "react-scripts start",
